--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة التخييم</title>
+    <title>صفحة التقييم</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -128,7 +128,7 @@
         };
 
         fetch(
-          "https://script.google.com/macros/s/AKfycbyKFVEh9KMJb7k9urpdjAot9p5meMbsqfkrmVeYpfiI/dev",
+          "https://script.google.com/macros/s/AKfycby8saERwbtzH-ZO1otLjBGuEGh_koaZML44PZQbfLbAPfY9ANLgStG-f3noNKuwnjm-4A/exec",
           {
             // استبدل بـ URL الذي حصلت عليه من Google Apps Script
             method: "POST",
