--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة التقييم</title>
+    <title>صفحة التخييم</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,35 +63,38 @@
         });
 
         function submitFeedback() {
-            const phone = document.getElementById('phone').value;
-            const suggestion = document.getElementById('suggestion').value;
-            const timestamp = new Date().toLocaleString();
+    const phone = document.getElementById('phone').value;
+    const suggestion = document.getElementById('suggestion').value;
+    const timestamp = new Date().toISOString(); // حفظ التوقيت بتنسيق UTC
 
-            if (!phone || selectedRating === 0) {
-                alert("يرجى إدخال رقم الهاتف واختيار التقييم");
-                return;
-            }
+    if (!phone || selectedRating === 0) {
+        alert("يرجى إدخال رقم الهاتف واختيار التقييم");
+        return;
+    }
 
-            const formData = new FormData();
-            formData.append("phone", phone);
-            formData.append("rating", selectedRating);
-            formData.append("suggestion", suggestion);
-            formData.append("timestamp", timestamp);
+    const formData = new FormData();
+    formData.append("phone", phone);
+    formData.append("rating", selectedRating);
+    formData.append("suggestion", suggestion);
+    formData.append("timestamp", timestamp);
 
-            fetch("https://script.google.com/macros/s/AKfycbzjEjHOJCHja2eNuyBGe7T9B2747MzYOcdEUnmDP1W5waJWEkr05RH0Gv8iCVog50IO/exec", {
-                method: "POST",
-                body: formData
-            })
-            .then(response => response.text())
-            .then(data => {
-                alert("تم إرسال التقييم بنجاح!");
-                document.getElementById('phone').value = "";
-                document.getElementById('suggestion').value = "";
-                document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
-                selectedRating = 0;
-            })
-            .catch(error => console.error("خطأ:", error));
+    fetch("YOUR_GOOGLE_SCRIPT_URL", {
+        method: "POST",
+        body: formData
+    })
+    .then(response => response.text())
+    .then(data => {
+        alert(data); // يعرض إما "تم الحفظ بنجاح" أو "تم التقييم بالفعل اليوم!"
+        if (data === "تم الحفظ بنجاح") {
+            document.getElementById('phone').value = "";
+            document.getElementById('suggestion').value = "";
+            document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
+            selectedRating = 0;
         }
+    })
+    .catch(error => console.error("خطأ:", error));
+}
+
     </script>
 
 </body>
