--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة التخييم</title>
+    <title>صفحة التقييم</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,13 +62,13 @@
             });
         });
 
-       function submitFeedback() {
+      function submitFeedback() {
     const phone = document.getElementById('phone').value;
     const suggestion = document.getElementById('suggestion').value;
     const timestamp = new Date().toISOString();
 
     if (!phone || selectedRating === 0) {
-        alert("يرجى إدخال رقم الهاتف واختيار التقييم");
+        alert("❗ يرجى إدخال رقم الهاتف واختيار التقييم");
         return;
     }
 
@@ -84,17 +84,16 @@
     })
     .then(response => response.text())
     .then(data => {
-        alert(data); // سيعرض إما "✅ تم الحفظ بنجاح!" أو "⚠️ تم التقييم بالفعل اليوم!"
-        if (data.includes("تم الحفظ")) {
+        alert(data); // يعرض إما "✅ تم إرسال التقييم بنجاح!" أو "❌ لا يمكنك التقييم أكثر من مرة في اليوم!"
+        if (data.includes("تم إرسال التقييم")) {
             document.getElementById('phone').value = "";
             document.getElementById('suggestion').value = "";
             document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
             selectedRating = 0;
         }
     })
-    .catch(error => console.error("خطأ:", error));
+    .catch(error => console.error("⚠️ خطأ:", error));
 }
-
 
     </script>
 
