--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         points: points,
     };
 
-    fetch("YOUR_GOOGLE_SCRIPT_URL", {
+    fetch("https://script.google.com/macros/s/AKfycbz1ud3Yy86uhkPrR5REUFP9o328Xpy124L9AGFEleNgKYhhKC5KwrV8MmKtezZyIIrqJA/exec", {
         method: "POST",
         mode: "cors",
         headers: {
