--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة التقييم</title>
+    <title>صفحة الخخييم</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -110,47 +110,58 @@
         });
       });
 
-      function submitReview() {
-        let phone = document.getElementById("phone").value;
-        let suggestion = document.getElementById("suggestion").value;
+    function submitReview() {
+    let phone = document.getElementById("phone").value;
+    let suggestion = document.getElementById("suggestion").value;
 
-        if (!phone || selectedRating == 0) {
-          alert("يرجى إدخال رقم الهاتف واختيار التقييم.");
-          return;
-        }
+    if (!phone || selectedRating == 0) {
+        alert("❗ يرجى إدخال رقم الهاتف واختيار التقييم.");
+        return;
+    }
 
-        let points = 5; // النقاط التي يحصل عليها المستخدم
+    let points = 5; // النقاط التي يحصل عليها المستخدم
 
-        let formData = {
-          phone: phone,
-          rating: selectedRating,
-          suggestion: suggestion,
-          points: points,
-        };
+    let formData = {
+        phone: phone,
+        rating: selectedRating,
+        suggestion: suggestion,
+        points: points,
+    };
 
-        fetch(
-          "https://script.google.com/macros/s/AKfycbz1ud3Yy86uhkPrR5REUFP9o328Xpy124L9AGFEleNgKYhhKC5KwrV8MmKtezZyIIrqJA/exec",
-          {
-            // استبدل بـ URL الذي حصلت عليه من Google Apps Script
-            method: "POST",
-            mode: "no-cors",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify(formData),
-          }
-        )
-          .then(() => {
-            alert("تم إرسال التقييم بنجاح!");
+    fetch("https://script.google.com/macros/s/AKfycbz1ud3Yy86uhkPrR5REUFP9o328Xpy124L9AGFEleNgKYhhKC5KwrV8MmKtezZyIIrqJA/exec", {
+        method: "POST",
+        mode: "cors",
+        headers: {
+            "Content-Type": "application/json",
+        },
+        body: JSON.stringify(formData),
+    })
+    .then(response => response.json()) // تحويل الاستجابة إلى JSON
+    .then(data => {
+        if (data.status === "error") {
+            alert(data.message); // إذا كان هناك خطأ، إظهار رسالة تنبيه
+        } else {
+            alert(data.message); // إظهار رسالة النجاح
+            
+            // إضافة التقييم إلى الجدول داخل الصفحة
+            let reviewTableBody = document.getElementById("reviewTableBody");
+            let newRow = reviewTableBody.insertRow();
+            newRow.insertCell(0).innerText = phone;
+            newRow.insertCell(1).innerText = selectedRating;
+            newRow.insertCell(2).innerText = suggestion;
+            newRow.insertCell(3).innerText = points;
+            newRow.insertCell(4).innerText = data.date; // عرض التاريخ
+            
+            // إعادة تعيين القيم
             document.getElementById("phone").value = "";
             document.getElementById("suggestion").value = "";
             selectedRating = 0;
-            document
-              .querySelectorAll(".stars span")
-              .forEach((s) => s.classList.remove("active"));
-          })
-          .catch((error) => console.log("Error:", error));
-      }
+            document.querySelectorAll(".stars span").forEach(s => s.classList.remove("active"));
+        }
+    })
+    .catch(error => console.log("⚠️ خطأ:", error));
+}
+
     </script>
   </body>
 </html>
