--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة الخخيم</title>
+    <title>صفحة التقييم</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -82,15 +82,15 @@
         <h3>سجل التقييمات</h3>
         <table>
           <thead>
-    <tr>
-        <th>رقم الهاتف</th>
-        <th>التقييم</th>
-        <th>الاقتراح</th>
-        <th>النقاط</th>
-        <th>التاريخ</th> <!-- تأكد من إضافة هذا العمود -->
-    </tr>
-</thead>
-<tbody id="reviewTableBody"></tbody>
+            <tr>
+              <th>رقم الهاتف</th>
+              <th>التقييم</th>
+              <th>الاقتراح</th>
+              <th>النقاط</th>
+              <th>التاريخ</th>
+            </tr>
+          </thead>
+          <tbody id="reviewTableBody"></tbody>
         </table>
       </div>
     </div>
@@ -110,58 +110,47 @@
         });
       });
 
-function submitReview() {
-    let phone = document.getElementById("phone").value;
-    let suggestion = document.getElementById("suggestion").value;
+      function submitReview() {
+        let phone = document.getElementById("phone").value;
+        let suggestion = document.getElementById("suggestion").value;
 
-    if (!phone || selectedRating == 0) {
-        alert("❗ يرجى إدخال رقم الهاتف واختيار التقييم.");
-        return;
-    }
+        if (!phone || selectedRating == 0) {
+          alert("يرجى إدخال رقم الهاتف واختيار التقييم.");
+          return;
+        }
 
-    let points = 5; // النقاط التي يحصل عليها المستخدم
+        let points = 5; // النقاط التي يحصل عليها المستخدم
 
-    let formData = {
-        phone: phone,
-        rating: selectedRating,
-        suggestion: suggestion,
-        points: points,
-    };
+        let formData = {
+          phone: phone,
+          rating: selectedRating,
+          suggestion: suggestion,
+          points: points,
+        };
 
-    fetch("https://script.google.com/macros/s/AKfycbz71Y1IKdriYi3Oxu31UIpoPwzs5Bk9DLywknCWg6EAkEn4ewVPnP0e33jHGHtLA7pdhQ/exec", {
-        method: "POST",
-        mode: "cors",
-        headers: {
-            "Content-Type": "application/json",
-        },
-        body: JSON.stringify(formData),
-    })
-    .then(response => response.json()) // تحويل الاستجابة إلى JSON
-    .then(data => {
-        alert(data.message); // عرض الرسالة للمستخدم
-
-        if (data.status === "success") {
-            // إضافة التقييم إلى الجدول داخل الصفحة
-            let reviewTableBody = document.getElementById("reviewTableBody");
-            let newRow = reviewTableBody.insertRow();
-            newRow.insertCell(0).innerText = phone;
-            newRow.insertCell(1).innerText = selectedRating;
-            newRow.insertCell(2).innerText = suggestion;
-            newRow.insertCell(3).innerText = points;
-            newRow.insertCell(4).innerText = data.date; // عرض التاريخ
-            
-            // إعادة تعيين القيم
+        fetch(
+          "https://script.google.com/macros/s/AKfycbwtR5YlLuodf63JVTXG4pBknHJs3tx-F2Lwf6cDJbJSIvs2FDwwnZRR7g9NtROYkIDIoQ/exec",
+          {
+            // استبدل بـ URL الذي حصلت عليه من Google Apps Script
+            method: "POST",
+            mode: "no-cors",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(formData),
+          }
+        )
+          .then(() => {
+            alert("تم إرسال التقييم بنجاح!");
             document.getElementById("phone").value = "";
             document.getElementById("suggestion").value = "";
             selectedRating = 0;
-            document.querySelectorAll(".stars span").forEach(s => s.classList.remove("active"));
-        }
-    })
-    .catch(error => console.log("⚠️ خطأ:", error));
-}
-
-
-
+            document
+              .querySelectorAll(".stars span")
+              .forEach((s) => s.classList.remove("active"));
+          })
+          .catch((error) => console.log("Error:", error));
+      }
     </script>
   </body>
 </html>
