--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة التقييم</title>
+    <title>صفحة الخخقييم</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -81,16 +81,16 @@
       <div class="table-container">
         <h3>سجل التقييمات</h3>
         <table>
-          <thead>
-            <tr>
-              <th>رقم الهاتف</th>
-              <th>التقييم</th>
-              <th>الاقتراح</th>
-              <th>النقاط</th>
-              <th>التاريخ</th>
-            </tr>
-          </thead>
-          <tbody id="reviewTableBody"></tbody>
+         <thead>
+    <tr>
+        <th>رقم الهاتف</th>
+        <th>التقييم</th>
+        <th>الاقتراح</th>
+        <th>النقاط</th>
+        <th>التاريخ</th> <!-- تأكد من إضافة هذا العمود -->
+    </tr>
+</thead>
+<tbody id="reviewTableBody"></tbody>
         </table>
       </div>
     </div>
