--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة الججييم</title>
+    <title>صفحة الثثييم</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -128,7 +128,7 @@
         points: points,
     };
 
-    fetch("https://script.google.com/macros/s/AKfycbwtR5YlLuodf63JVTXG4pBknHJs3tx-F2Lwf6cDJbJSIvs2FDwwnZRR7g9NtROYkIDIoQ/exec", {
+    fetch("https://script.google.com/macros/s/AKfycbwHNynbMQsPFbINlcLpyihGjHoD56fkvhISnq-3YxheuA7Nn2rJw_Isl9_QyQpCnihltA/exec", {
         method: "POST",
         mode: "cors",
         headers: {
