--- a/index.html
+++ b/index.html
@@ -1,156 +1,89 @@
 <!DOCTYPE html>
 <html lang="ar">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة اليييييم</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>نموذج التقييم</title>
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        direction: rtl;
-        background-color: #f4f4f4;
-      }
-      .container {
-        background: #fff;
-        padding: 20px;
-        margin: 50px auto;
-        width: 350px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      input,
-      textarea,
-      button {
-        width: 100%;
-        margin: 10px 0;
-        padding: 10px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-      }
-      .stars {
-        display: flex;
-        justify-content: center;
-        direction: ltr;
-      }
-      .stars span {
-        font-size: 25px;
-        cursor: pointer;
-        color: gray;
-      }
-      .stars span.active {
-        color: gold;
-      }
-      .table-container {
-        margin-top: 20px;
-      }
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 10px;
-      }
-      table,
-      th,
-      td {
-        border: 1px solid #ccc;
-      }
-      th,
-      td {
-        padding: 8px;
-        text-align: center;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            direction: rtl;
+            text-align: center;
+            margin: 20px;
+        }
+        form {
+            max-width: 400px;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        input, select, textarea, button {
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        button {
+            background-color: #28a745;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #218838;
+        }
     </style>
-  </head>
-  <body>
-    <div class="container">
-      <h2>تقييمك يهمنا</h2>
-      <input type="tel" id="phone" placeholder="أدخل رقم الهاتف" required />
+</head>
+<body>
+    <h2>نموذج التقييم</h2>
+    <form id="feedbackForm">
+        <label for="phone">رقم الهاتف:</label>
+        <input type="tel" id="phone" name="phone" required>
 
-      <div class="stars">
-        <span data-value="1">★</span>
-        <span data-value="2">★</span>
-        <span data-value="3">★</span>
-        <span data-value="4">★</span>
-        <span data-value="5">★</span>
-      </div>
+        <label for="rating">التقييم:</label>
+        <select id="rating" name="rating" required>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+        </select>
 
-      <textarea id="suggestion" placeholder="أدخل اقتراحك"></textarea>
+        <label for="suggestion">اقتراح:</label>
+        <textarea id="suggestion" name="suggestion" rows="4"></textarea>
 
-      <button onclick="submitReview()">إرسال التقييم</button>
-
-      <div class="table-container">
-        <h3>سجل التقييمات</h3>
-        <table>
-          <thead>
-    <tr>
-        <th>رقم الهاتف</th>
-        <th>التقييم</th>
-        <th>الاقتراح</th>
-        <th>النقاط</th>
-        <th>التاريخ</th> <!-- تأكد من إضافة هذا العمود -->
-    </tr>
-</thead>
-<tbody id="reviewTableBody"></tbody>
-        </table>
-      </div>
-    </div>
+        <button type="button" onclick="submitFeedback()">إرسال</button>
+    </form>
 
     <script>
-      let selectedRating = 0;
+        function submitFeedback() {
+            const phone = document.getElementById("phone").value;
+            const rating = document.getElementById("rating").value;
+            const suggestion = document.getElementById("suggestion").value;
+            
+            if (!phone || !rating) {
+                alert("يرجى إدخال رقم الهاتف والتقييم");
+                return;
+            }
 
-      document.querySelectorAll(".stars span").forEach((star) => {
-        star.addEventListener("click", function () {
-          selectedRating = this.getAttribute("data-value");
-          document
-            .querySelectorAll(".stars span")
-            .forEach((s) => s.classList.remove("active"));
-          for (let i = 0; i < selectedRating; i++) {
-            document.querySelectorAll(".stars span")[i].classList.add("active");
-          }
-        });
-      });
-
-      function submitReview() {
-        let phone = document.getElementById("phone").value;
-        let suggestion = document.getElementById("suggestion").value;
-
-        if (!phone || selectedRating == 0) {
-          alert("يرجى إدخال رقم الهاتف واختيار التقييم.");
-          return;
+            fetch('https://script.google.com/macros/s/AKfycbzCG4ToTn9oqFusOde4Qj9t9lnoHS2WbhotsFwauCv4kBnSrtJFp72-MhOLssD1ufgSXg/exec', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ phone, rating, suggestion })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === 'success') {
+                    alert("تم إرسال التقييم بنجاح!");
+                } else {
+                    alert("لا يمكنك التقييم أكثر من مرة يوميًا");
+                }
+            })
+            .catch(error => console.error('Error:', error));
         }
-
-        let points = 5; // النقاط التي يحصل عليها المستخدم
-
-        let formData = {
-          phone: phone,
-          rating: selectedRating,
-          suggestion: suggestion,
-          points: points,
-        };
-
-        fetch(
-          "https://script.google.com/macros/s/AKfycbwHNynbMQsPFbINlcLpyihGjHoD56fkvhISnq-3YxheuA7Nn2rJw_Isl9_QyQpCnihltA/exec",
-          {
-            // استبدل بـ URL الذي حصلت عليه من Google Apps Script
-            method: "POST",
-            mode: "no-cors",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify(formData),
-          }
-        )
-          .then(() => {
-            alert("تم إرسال التقييم بنجاح!");
-            document.getElementById("phone").value = "";
-            document.getElementById("suggestion").value = "";
-            selectedRating = 0;
-            document
-              .querySelectorAll(".stars span")
-              .forEach((s) => s.classList.remove("active"));
-          })
-          .catch((error) => console.log("Error:", error));
-      }
     </script>
-  </body>
+</body>
 </html>
