--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نموذج التقللللللللللللللللم</title>
+    <title>نموذج تت</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,32 +58,33 @@
         <button type="button" onclick="submitFeedback()">إرسال</button>
     </form>
 
-    <script>
-        function submitFeedback() {
-            const phone = document.getElementById("phone").value;
-            const rating = document.getElementById("rating").value;
-            const suggestion = document.getElementById("suggestion").value;
-            
-            if (!phone || !rating) {
-                alert("يرجى إدخال رقم الهاتف والتقييم");
-                return;
+   <script>
+    function submitFeedback() {
+        const phone = document.getElementById("phone").value;
+        const rating = document.getElementById("rating").value;
+        const suggestion = document.getElementById("suggestion").value;
+        
+        if (!phone || !rating) {
+            alert("يرجى إدخال رقم الهاتف والتقييم");
+            return;
+        }
+
+        fetch('https://script.google.com/macros/s/AKfycbzEQt_S3YUlAulc8doMeo15h9m2ypNrgcwUUFQFavGvNojDxyMvA5IQkz4yeGrunTOHIw/exec', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ phone, rating, suggestion })
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.status === 'success') {
+                alert("تم إرسال التقييم بنجاح!");
+            } else {
+                alert("لا يمكنك التقييم أكثر من مرة يوميًا");
             }
-
-            fetch('https://script.google.com/macros/s/AKfycbzEQt_S3YUlAulc8doMeo15h9m2ypNrgcwUUFQFavGvNojDxyMvA5IQkz4yeGrunTOHIw/exec', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ phone, rating, suggestion })
-})
-.then(response => response.json())
-.then(data => {
-    if (data.status === 'success') {
-        alert("تم إرسال التقييم بنجاح!");
-    } else {
-        alert("لا يمكنك التقييم أكثر من مرة يوميًا");
+        })
+        .catch(error => console.error('Error:', error));
     }
-})
-.catch(error => console.error('Error:', error));
+</script>
 
-    </script>
 </body>
 </html>
