--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نموذج هههههههههههه</title>
+    <title>نموذج غغغغغغغغغغغغغ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
     </form>
 
    <script>
-   function submitFeedback() {
+  function submitFeedback() {
     const phone = document.getElementById("phone").value;
     const rating = document.getElementById("rating").value;
     const suggestion = document.getElementById("suggestion").value;
@@ -74,19 +74,21 @@
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ phone, rating, suggestion })
     })
-    .then(response => response.json())
-    .then(data => {
-        if (data.status === 'success') {
-            alert(data.message);
-        } else {
-            alert(data.message);
+    .then(response => {
+        if (!response.ok) {
+            throw new Error("خطأ في الاتصال بالسيرفر");
         }
+        return response.json();
+    })
+    .then(data => {
+        alert(data.message);
     })
     .catch(error => {
         console.error('Error:', error);
         alert("حدث خطأ أثناء الإرسال. حاول مرة أخرى.");
     });
 }
+
 
 
 </script>
