--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة التقييم</title>
+    <title>صفحة اللللللللييم</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -129,7 +129,7 @@
         };
 
         fetch(
-          "https://script.google.com/macros/s/AKfycby5yxHSoyUcRxRBMhLEwa3PMri1zzEa1DjULmTLjCAxKmF0HYyo90t9WvjYAldtgSuslg/exec",
+          "https://script.google.com/macros/s/AKfycbw0P_rEJy1ADsIKWn421M5tA9hzYdDeNZUFkppkBz3CUUtsWcT3ZbCyfpoH8wlUeLuoxw/exec",
           {
             // استبدل بـ URL الذي حصلت عليه من Google Apps Script
             method: "POST",
