--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة ثثثثثثثثث</title>
+    <title>صفحة yyyyyy</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -110,47 +110,40 @@
         });
       });
 
-      function submitReview() {
-        let phone = document.getElementById("phone").value;
-        let suggestion = document.getElementById("suggestion").value;
+     function submitFeedback() {
+    const phone = document.getElementById("phone").value;
+    const rating = document.getElementById("rating").value;
+    const suggestion = document.getElementById("suggestion").value;
+    
+    if (!phone || !rating) {
+        alert("يرجى إدخال رقم الهاتف والتقييم");
+        return;
+    }
 
-        if (!phone || selectedRating == 0) {
-          alert("يرجى إدخال رقم الهاتف واختيار التقييم.");
-          return;
+    fetch('https://script.google.com/macros/s/AKfycbw5MbmX550YeDjuakytOttv60h5gIIKVLSic9XDh4YABEysFDbZE4BgiOzC5dnbQL07aA/exec', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ phone, rating, suggestion })
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error("خطأ في الاتصال بالسيرفر");
         }
+        return response.json();
+    })
+    .then(data => {
+        if (data.status === 'success') {
+            alert("✅ " + data.message); // عرض رسالة النجاح
+        } else {
+            alert("⚠️ " + data.message); // عرض رسالة الخطأ (سواء كان تقييم اليوم أو تقييم سابق)
+        }
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        alert("❌ حدث خطأ أثناء الإرسال. حاول مرة أخرى.");
+    });
+}
 
-        let points = 5; // النقاط التي يحصل عليها المستخدم
-
-        let formData = {
-          phone: phone,
-          rating: selectedRating,
-          suggestion: suggestion,
-          points: points,
-        };
-
-        fetch(
-          "https://script.google.com/macros/s/AKfycbw5MbmX550YeDjuakytOttv60h5gIIKVLSic9XDh4YABEysFDbZE4BgiOzC5dnbQL07aA/exec",
-          {
-            // استبدل بـ URL الذي حصلت عليه من Google Apps Script
-            method: "POST",
-            mode: "no-cors",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify(formData),
-          }
-        )
-          .then(() => {
-            alert("تم إرسال التقييم بنجاح!");
-            document.getElementById("phone").value = "";
-            document.getElementById("suggestion").value = "";
-            selectedRating = 0;
-            document
-              .querySelectorAll(".stars span")
-              .forEach((s) => s.classList.remove("active"));
-          })
-          .catch((error) => console.log("Error:", error));
-      }
     </script>
   </body>
 </html>
