--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة yyyyyy</title>
+    <title>صفحة hhhhhhhh</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -76,7 +76,7 @@
 
       <textarea id="suggestion" placeholder="أدخل اقتراحك"></textarea>
 
-      <button onclick="submitReview()">إرسال التقييم</button>
+      <button onclick="submitFeedback()">إرسال التقييم</button>
 
       <div class="table-container">
         <h3>سجل التقييمات</h3>
