--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>صفحة hhhhhhhh</title>
+    <title>صفحة تتت</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -120,7 +120,7 @@
         return;
     }
 
-    fetch('https://script.google.com/macros/s/AKfycbw5MbmX550YeDjuakytOttv60h5gIIKVLSic9XDh4YABEysFDbZE4BgiOzC5dnbQL07aA/exec', {
+    fetch('https://script.google.com/macros/s/AKfycbw_zieqLURglqmKG_a8ihJeEufSq11vCs7_W19Ie_ks6lpEAf3W2MacOmLGujbinkjhAQ/exec', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ phone, rating, suggestion })
